--- a/src/data/structs/h1/tags/weapon.yml
+++ b/src/data/structs/h1/tags/weapon.yml
@@ -796,7 +796,7 @@ type_defs:
         comments:
           en: >
             Determines the aiming cone where projectiles paths will be pulled
-            towards the target biped's [autoaim pill](~biped#physics-and-autoaim-pills).
+            towards the target biped's [autoaim pill](~biped#autoaim-pill).
             This is the "red reticle" angle.
       - name: autoaim_range
         type: float
