--- a/src/data/structs/h1/tags/biped.yml
+++ b/src/data/structs/h1/tags/biped.yml
@@ -24,7 +24,7 @@ type_defs:
       - name: spherical
         comments:
           en: >
-            The [autoaim pill](#physics-and-autoaim-pills) is a sphere at the
+            The [autoaim pill](~biped#autoaim-pill) is a sphere at the
             midpoint between the head and pelvis nodes, rather than a capsule
             spanning the head and pelvis nodes.
       - name: passes_through_other_bipeds
@@ -210,7 +210,7 @@ type_defs:
           unit: world units
         comments:
           en: >
-            Sets the height of the [physics pill](#physics-and-autoaim-pills) when the biped _uses player physics_
+            Sets the height of the [physics pill](#physics-pill) when the biped _uses player physics_
             and is standing.
       - name: crouching_collision_height
         type: float
@@ -218,7 +218,7 @@ type_defs:
           unit: world units
         comments:
           en: >
-            Sets the height of the [physics pill](#physics-and-autoaim-pills) when the biped _uses player physics_
+            Sets the height of the [physics pill](#physics-pill) when the biped _uses player physics_
             and is crouching.
       - name: collision_radius
         type: float
@@ -226,7 +226,7 @@ type_defs:
           unit: world units
         comments:
           en: >
-            Sets the radius of the [physics pill/sphere](#physics-and-autoaim-pills).
+            Sets the radius of the [physics pill/sphere](#physics-pill).
       - type: pad
         size: 40
       - name: autoaim_width
@@ -278,7 +278,7 @@ type_defs:
         comments:
           en: >
             Index of the "head" model node used to create the biped's
-            [autoaim pill](#physics-and-autoaim-pills). The pill also
+            [autoaim pill](#autoaim-pill). The pill also
             uses the "bip01 pelvis" node.
       - name: pelvis_model_node_index
         type: Index
@@ -287,7 +287,7 @@ type_defs:
         comments:
           en: >
             Index of the "bip01 pelvis" model node used to create the biped's
-            [autoaim pill](#physics-and-autoaim-pills). The pill also
+            [autoaim pill](#autoaim-pill). The pill also
             uses the "bip01 head" node.
         endianness: little
       - name: contact_point
